@@ -1,3 +1,7 @@
+drkns 24.04.2017 07:59:10 +0000 - build 4942
+
+1. Уточнение 4940 ещё раз.
+
 drkns 23.04.2017 22:24:28 +0000 - build 4941
 
 1. Уточнение 4936.
